repair some tests